# Recommender_system_with_Python

./: LICENSE  content_based_filtering.ipynb  main.py  pyproject.toml
notebooks/: movie_recommendation_content_based_filtering.ipynb
notebooks/.ipynb_checkpoints/: book_recommendation_item_based_collaborative_filtering-checkpoint.ipynb  movie_recommendation_content_based_filtering-checkpoint.ipynb
