[project]
name = "recommender-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.6",
    "scikit-learn>=1.7.2",
]
